--- a/precastr/controller/home/cell/postItemCells/AfterApprovedButtonsTableViewCell.xib
+++ b/precastr/controller/home/cell/postItemCells/AfterApprovedButtonsTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14810.12" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14766.15"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Os6-0y-N4w">
-                        <rect key="frame" x="12" y="5" width="30" height="30"/>
+                        <rect key="frame" x="62" y="5" width="30" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="0.8980392157" green="0.01176470588" blue="0.01176470588" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <state key="normal" image="delete"/>
@@ -30,19 +30,24 @@
                         <state key="normal" image="share-group"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G8D-6t-Gzi">
-                        <rect key="frame" x="65" y="5" width="30" height="30"/>
+                        <rect key="frame" x="112" y="4" width="30" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="0.047058823530000002" green="0.43529411759999997" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
                         <state key="normal" image="telephone_icon"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hve-iN-t1T">
-                        <rect key="frame" x="118" y="5" width="30" height="30"/>
+                        <rect key="frame" x="165" y="4" width="30" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="0.047058823530000002" green="0.43529411759999997" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
                         <state key="normal" image="info"/>
                         <connections>
                             <action selector="publishInfoButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="tbg-9b-e4z"/>
                         </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sql-f9-gI1">
+                        <rect key="frame" x="12" y="5" width="30" height="30"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                        <state key="normal" backgroundImage="user-moderator-icon"/>
                     </button>
                 </subviews>
             </tableViewCellContentView>
@@ -51,9 +56,10 @@
                 <outlet property="callButtonBtn" destination="G8D-6t-Gzi" id="rRE-TU-ApU"/>
                 <outlet property="deleteBtn" destination="Os6-0y-N4w" id="EEG-1h-O8E"/>
                 <outlet property="facebookInfoBtn" destination="Hve-iN-t1T" id="EDL-on-xbC"/>
+                <outlet property="postModeratorsBtn" destination="Sql-f9-gI1" id="IER-zv-LcI"/>
                 <outlet property="sharePostBtn" destination="bTF-sn-AyT" id="URJ-LX-U9v"/>
             </connections>
-            <point key="canvasLocation" x="132" y="142"/>
+            <point key="canvasLocation" x="131.8840579710145" y="141.96428571428569"/>
         </tableViewCell>
     </objects>
     <resources>
@@ -61,5 +67,6 @@
         <image name="info" width="9.5" height="18"/>
         <image name="share-group" width="16.5" height="18"/>
         <image name="telephone_icon" width="18" height="18"/>
+        <image name="user-moderator-icon" width="24" height="24"/>
     </resources>
 </document>
