--- a/precastr/controller/home/cell/views/PostCastMenu.xib
+++ b/precastr/controller/home/cell/views/PostCastMenu.xib
@@ -59,7 +59,7 @@
                     <color key="backgroundColor" red="0.035294117647058823" green="0.76078431372549016" blue="0.035294117647058823" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
