--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -1221,7 +1221,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GcI-mh-X9o">
-                                <rect key="frame" x="36" y="100" width="314" height="30"/>
+                                <rect key="frame" x="36" y="90" width="314" height="30"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -1230,7 +1230,7 @@
                                 </connections>
                             </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jRH-qe-L5Y">
-                                <rect key="frame" x="0.0" y="130" width="375" height="547"/>
+                                <rect key="frame" x="0.0" y="130" width="375" height="537"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
@@ -1807,7 +1807,7 @@
         <image name="sent-email" width="16" height="14.5"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cuK-cd-rny"/>
+        <segue reference="9cd-nP-F1L"/>
         <segue reference="0cb-mg-TdQ"/>
         <segue reference="pyB-LE-lgF"/>
         <segue reference="vqc-vD-fxp"/>
